slider implemantation & z-index problem fix

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,7 @@
+.wrapper {
+    position: relative;
+    z-index: 1;
+}
 .nav_link {
     color: #fff;
     font-size: 1.25rem;
