--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -4,7 +4,6 @@
     max-width: 100%;
     position: relative;
     margin-top: -74px;  
-    z-index: -1;
 }
 
 .video_wrapper {
